======================================================================
Backport Changes since U-Boot 1.1.2:
======================================================================

* Remove redundant armv4 flag from arm926ejs compile flags.
  Currently the arm926ejs tree has the armv4 option set during
  compilation. This flag does not belong here because a arm926
  CPU is always a armv5 CPU.

* Make sure only supported compiler options are used
  Import "cc-option" shell function from kernel and
  use it to get the correct ARM GCC options for individual CPUs
  Patch by Peter Pearse, 30 Jun 2005

======================================================================
Changes for U-Boot 1.1.2:
======================================================================

* Code cleanup, mostly for GCC-3.3.x

* Cleanup confusing use of CONFIG_ETH*ADDR - ust his only to
  pre-define a MAC address; use CONFIG_HAS_ETH* to enable support for
  additional ethernet addresses.

* Cleanup drivers/i82365.c - avoid duplication of code

* Fix bogus "cannot span across banks" flash error message

* Code cleanup

* Add support for CompactFlash for the CPC45 Board.

* Fix problems with CMC_PU2 flash driver.

* Cleanup:
  - avoid trigraph warning in fs/ext2/ext2fs.c
  - rename UC100 -> uc100

* Add support for UC100 board

* Patch by Stefan Roese, 16 Dez 2004:
  - ext2fs support added
  - Tundra universe support added
  - Coldfire MCF5249 support added (no preloader needed!)
  - MCF5249 board TASREG added
  - PPC boards added: APC405, CPCI405DT, CPCI750, G2000, HH405,
    VOM405, WUH405
  - some esd boards updated
  - memory commands "mdc" and "mwc" added for cyclic read/write
    (CONFIG_MX_CYCLIC, see README for further description)

* Add support for INKA4X0 board

* Patch by Steven Scholz, 12 Dec 2004:
  Fix typo in AT91 memory setup.

* Patch by Martin Krause, 27 Oct 2004:
  - add support for "STK52xx" board (including PS/2 multiplexer)
  - add hardware detection for TQM5200
